# DeadLock

./: .gitignore  CmakeLists.txt  README.md  app_icon.rc  gen.bat  genDebug.bat  genRelease.bat
Deadlock_client_updater/: CMakeLists.txt  updater_icon.rc
Deadlock_client_updater/sources/: main.cpp
resources/: resources.qrc
resources/ChatsWidget/: chatsResources.qrc
resources/GreetWidget/: greetResources.qrc
resources/LoginWidget/: loginResources.qrc.depends
sources/: authorizationComponent.cpp  authorizationComponent.h  buttons.cpp  buttons.h  chatMenu.cpp  chatMenu.h  loginWidget.cpp  loginWidget.h  main.cpp  mainWindow.cpp  mainWindow.h  registrationComponent.cpp  registrationComponent.h  utility.cpp  utility.h
sources/ChatsWidget/: ChatComponent.cpp  ChatComponent.h  addChatDialogComponent.cpp  addChatDialogComponent.h  buttons.cpp  buttons.h  chatHeaderComponent.cpp  chatHeaderComponent.h  chatsListComponent.cpp  chatsListComponent.h  chatsWidget.cpp  chatsWidget.h  delimiterComponent.cpp  delimiterComponent.h  friendSearchDialogComponent.cpp  friendSearchDialogComponent.h  greetWidget.cpp  greetWidget.h  helloAreaComponent.cpp  helloAreaComponent.h  mainWindow.cpp  mainWindow.h  messageComponent.cpp  messageComponent.h  messagingAreaComponent.cpp  messagingAreaComponent.h  notificationWidget.cpp  notificationWidget.h  overlayWidget.cpp  overlayWidget.h  workerQt.cpp  workerQt.h
sources/Core/: avatar.cpp  avatar.h  avatarInfo.h  blob.cpp  blob.h  chat.cpp  chat.h  client.cpp  client.h  configManager.cpp  configManager.h  database.cpp  database.h  file.h  (+22 more)
(+98 files in other folders)
